# uni-api

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile-test  Dockerfile.debug  README.md  README_CN.md  VERSION  config.py  db.py  docker-compose.yml  fugue_observability.py  log_config.py  main.py  models.py  pyproject.toml  request.py  request_review.py  requirements.txt  response.py  routing.py  upstream.py  utils.py  vercel.json  wrangler.toml
.github/workflows/: docker_image.yml  main.yml  release.yml  sync.yml  (+1 more)
components/: provider_table.py
docs/: refactor-target-architecture.md
test/: aws copy.py  aws-boto3.py  aws-httpx-stream copy.py  aws-httpx-stream.py  aws-httpx.py  aws.py  b642png.py  codex_oauth_login.py  conftest.py  convert_audio_response_to_mp3.py  curl.py  gen_key.py  launch_with_clear.py  locustfile.py  mock_server.go  parse_markdown.py  provider_test.py  simple_tcp_server.py  test_api_handlers.py  test_audio_chat_completion.py  test_auth_components.py  test_baseurl.py  test_codex_headers.py  test_config_runtime.py  test_content_generation_tasks.py  test_dict.py  test_fixtures_exist.py  test_fugue_observability.py  test_gemini_preview_tts_chat_completions.py  test_gemini_reasoning_content.py  test_healthz.py  test_httpx.py  test_json.py  test_matplotlib.py  test_messages_passthrough.py  test_nostream.py  test_oaix_header_passthrough.py  test_observability_components.py  test_optimizations.py  test_post_body_parameter_overrides.py  (+26 more)
tools/: benchmark_api_key_lookup.py  benchmark_client_pool.py  benchmark_config_compile.py  benchmark_request_inspection.py  benchmark_routing.py  benchmark_streaming.py
uni_api/: __init__.py  app.py  app_state.py  runtime.py  validation_policy.py
video/: __init__.py  config.py  router.py  schema.py
(+89 files in other folders)
