[project]
name = "uni-api"
version = "1.6.70"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "certifi==2025.1.31",
    "cryptography==43.0.3",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx-socks==0.9.2",
    "httpx[http2]>=0.27.2",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "ruamel-yaml>=0.18.15",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
]
