[project]
name = "uni-api"
version = "1.7.149"
description = "Unified large language model API gateway with OpenAI-compatible routing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "certifi==2025.1.31",
    "cryptography==43.0.3",
    "fastapi>=0.116.1",
    "greenlet>=3.2.4",
    "httpx-socks==0.9.2",
    "httpx[http2]>=0.27.2",
    "pillow>=11.3.0",
    "pytest>=8.4.1",
    "python-multipart>=0.0.20",
    "ruamel-yaml>=0.18.15",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "watchfiles>=1.1.0",
    "zstandard>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
norecursedirs = ["core/test", ".git", ".venv", "node_modules", "__pycache__"]
markers = [
    "integration: tests that need a running local service or external systems",
    "network: tests or scripts that perform real network calls",
    "credentials: tests that require private credentials",
    "optional: tests that require optional local dependencies or artifacts",
]
